<resources>
    <string name="app_name">My calc</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_percent">%</string>
    <string name="btn_c">C</string>
    <string name="btn_del">del</string>
    <string name="btn_division">/</string>
    <string name="btn_0">0</string>
    <string name="btn_pointer">.</string>
    <string name="btn_equally">=</string>
    <string name="hardcode_view">1234567890</string>
    <string name="settings">Settings</string>
    <string name="light_theme">light theme</string>
    <string name="dark_theme">dark theme</string>
    <string name="back_to_calculator">Confirm and Return</string>
</resources>