<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_wp"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:width="@dimen/zero_dp"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_1"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_2"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_pointer"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_1"

        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_3"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_pointer"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_plus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:width="@dimen/zero_dp"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_4"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_5"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_6"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_minus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:width="@dimen/zero_dp"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_7"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_percent"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_8"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_clear"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_9"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_delete"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_multiplication"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_division"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:width="@dimen/zero_dp"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_percent"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button_clear"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.4"
        android:backgroundTint="@color/red"
        android:text="@string/btn_c"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.4"
        android:backgroundTint="@color/red"
        android:text="@string/btn_del"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_division"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_weight="1" />


    <Button
        android:id="@+id/button_0"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.7"
        android:backgroundTint="@color/ivory"
        android:text="@string/btn_0"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_pointer"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_pointer"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:alpha="0.8"
        android:backgroundTint="@color/gray"
        android:text="@string/btn_pointer"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:width="@dimen/zero_dp"
        android:alpha="0.7"
        android:backgroundTint="@color/green"
        android:text="@string/btn_equally"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_pointer"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintVertical_weight="1" />

    <!--    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/sea_wp"
            android:scaleType="centerCrop" если так вставлять, учитывает padding,
            может через игнор какой-то убрать можно?/>-->


</androidx.constraintlayout.widget.ConstraintLayout>